Fix images overlaping outline

--- a/src/components/StreamPicker/StreamPicker.module.scss
+++ b/src/components/StreamPicker/StreamPicker.module.scss
@@ -11,6 +11,7 @@
 .inputWrapper {
   flex: 0;
   padding: 8px 8px 0 8px;
+  z-index: 1;
 }
 
 .streamsWrapper {
